# sample_app

./: Dockerfile  Jenkinsfile  Makefile  README.md  app.py  pyproject.toml
tests/unit/: test_first_test.py
