[tool.poetry]
name = "cicd"
version = "0.1.0"
description = "My attempt at learning cicd"
authors = ["Naimesh"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
